# RAGProductionApp

./: .gitignore  Dockerfile  README.md  data_loader.py  fix_db.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py  supervisord.conf  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/b751bb36-9df6-4668-be18-3813f36a2c4b/: mutable_id_tracker.mappings
